opam-version: "2.0"
version: "0.0.1"
maintainer: "derutakayu@gmail.com"
authors: "derui"
license: "MIT"
homepage: "https://github.com/derui/ocaml-c-compiler"
bug-reports: "https://github.com/derui/ocaml-c-compiler"
dev-repo: "git+https://github.com/derui/ocaml-c-compiler"
synopsis: "C compiler by OCaml"
tags: []
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" { >= "2.0.0"}
  "menhir" {build}
  "alcotest" {with-test & < "2.0.0"}
  "ppxlib" { < "0.23.0" & >= "0.22.0"}
  "ppx_show" { < "0.3" & >= "0.2.0"}
]
available: ["ocaml" >= "4.09.0"]
description: """
"""
